<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/fillall"
    android:background="#fff"
    android:orientation="vertical" >

    <!-- Login user information -->

    <LinearLayout
        style="@style/fillx"
        android:background="@drawable/head_bg"
        android:gravity="center_vertical"
        android:padding="10dip" >

        <TextView
            android:id="@+id/back"
            style="@style/wrap"
            android:layout_marginLeft="5dip"
            android:background="@drawable/title_date_btn"
            android:text="@string/back" />

        <TextView
            style="@style/wrap"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/comment" />

        <TextView
            android:id="@+id/publish_comments"
            style="@style/wrap"
            android:layout_marginLeft="5dip"
            android:background="@drawable/title_date_btn"
            android:text="@string/publish" />
    </LinearLayout>

    <!-- Display MicroBlog message list -->

    <FrameLayout
        style="@style/fillx"
        android:layout_weight="1" >

        <com.cc.software.calendar.view.PullToRefreshListView
            android:id="@+id/comments_list"
            style="@style/fillall"
            android:background="#FFF"
            android:cacheColorHint="#FFF"
            android:divider="@null" />

        <ProgressBar
            android:id="@+id/progress"
            style="@style/wrap"
            android:layout_gravity="center" />
    </FrameLayout>

</LinearLayout>